setup: gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-maplibre",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kevinfabre-ods.github.io/maplibre-and-custom-icons",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy" : "yarn build",
+    "deploy" : "gh-pages -d build",
     "sprites": "svgo -f ./icons && spritezero ./static/sprites/sprites ./icons — ratio=1 && spritezero ./static/sprites/sprites@2x ./icons -- ratio=2"
   },
   "eslintConfig": {
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
